[gd_scene load_steps=5 format=2]

[ext_resource path="res://Map/Components/ObjectEmitter.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://ToolNodes/AudioClipPlayer.gd" type="Script" id=3]
[ext_resource path="res://Map/Tilesets/Ground_grass_0004_tile.png" type="Texture" id=4]

[node name="ObjectEmitter" type="Sprite"]
position = Vector2( 736, -224 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 96, 96 )
script = ExtResource( 1 )
delay_msec = 1000
active = true
max_count = 10

[node name="DirectionIndicator" type="Sprite" parent="."]
position = Vector2( 0, 40 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="AudioClipPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 1000.0
attenuation = 1.31951
script = ExtResource( 3 )
